; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm.c_vmm_cleanup.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm.c_vmm_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vmm_initialized = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vmm_cleanup() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @VMM_CLEANUP()
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* %1, align 4
  %4 = icmp eq i32 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i64 0, i64* @vmm_initialized, align 8
  br label %6

6:                                                ; preds = %5, %0
  %7 = load i32, i32* %1, align 4
  ret i32 %7
}

declare dso_local i32 @VMM_CLEANUP(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
